# fluent-ansi

./: Cargo.toml  LICENSE  README.md
docs/: TODO.md  type_trait_table.md
src/: add.rs  applied_to.rs  applied_to_method.rs  clear.rs  color.rs  color_in_a_plane.rs  colors.rs  effect.rs  flags.rs  format.rs  format_set.rs  formatted.rs  impl_macros.rs  lib.rs  private.rs  reset.rs  style.rs  style_attribute.rs  style_element.rs  style_set.rs  styled.rs  targeted_color.rs  tests.rs  to_format.rs  to_format_set.rs  to_style.rs  to_style_set.rs
src/color/: basic.rs  color_kind.rs  eight_bit.rs  indexed.rs  rgb.rs  simple.rs
src/colors/: basic.rs  color.rs  color_kind.rs  color_methods.rs  impl_color.rs  indexed.rs  rgb.rs  simple.rs
src/effect/: underline.rs
src/impl_macros/: applied_to.rs  color_type.rs  composed_styling.rs  fluent.rs  from_to.rs
src/style/: encoded_effects.rs
tests/: color_basic_test.rs  color_color_test.rs  color_indexed_test.rs  color_rgb_test.rs  color_simple_test.rs  color_test.rs  effect_test.rs  reset_test.rs  style_test.rs  styled_test.rs  targeted_color_test.rs  underline_test.rs
tests/common/: applied_to.rs  color_type.rs  composed_styling.rs  fluent.rs  from_to.rs  mod.rs  style_set.rs  to_style_set.rs
